# safecoin-program-library

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  patch.crates-io.sh  update-solana-dependencies.sh
associated-token-account/program/: Cargo.toml  program-id.md
associated-token-account/program-test/: Cargo.toml
associated-token-account/program-test/tests/: create_idempotent.rs  extended_mint.rs  process_create_associated_token_account.rs  program_test.rs  recover_nested.rs  spl_token_create.rs
associated-token-account/program/src/: error.rs  instruction.rs  lib.rs  processor.rs
associated-token-account/program/tests/: create_idempotent.rs  extended_mint.rs  functional.rs  process_create_associated_token_account.rs  program_test.rs  recover_nested.rs  spl_token_create.rs
binary-option/program/: Cargo.toml  Cargo.toml~  program_id.md
binary-option/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  spl_utils.rs  state.rs  system_utils.rs  validation_utils.rs
binary-oracle-pair/program/: Cargo.toml
binary-oracle-pair/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
binary-oracle-pair/program/tests/: tests.rs
farms/farm-client/: Cargo.toml
farms/farm-client/src/: client.rs  error.rs
farms/farm-client/tests/: orca_pools.rs  orca_vaults.rs  raydium_pools.rs  raydium_vaults.rs  saber_pools.rs  saber_vaults.rs
farms/farm-ctrl/: Cargo.toml
farms/farm-ctrl/src/: config.rs  fund.rs  generate.rs  get.rs  governance.rs  main.rs  print.rs  refdb.rs  vault.rs
farms/farm-rpc/: Cargo.toml  swagger.yaml
farms/farm-rpc/src/: config.rs  json_rpc.rs  main.rs
farms/farm-rpc/static/: index.html  manifest.json
farms/farm-sdk/: Cargo.toml  build.rs
farms/farm-sdk/src/: error.rs  farm.rs  fund.rs  id.rs  lib.rs  log.rs  math.rs  pack.rs  pool.rs  refdb.rs  string.rs  token.rs  traits.rs  vault.rs
farms/fund/: Cargo.toml
farms/fund/src/: common.rs  entrypoint.rs  fund_info.rs  user_info.rs
farms/fund/tests/: main.rs
farms/router-main/: Cargo.toml
farms/router-main/src/: add_farm.rs  add_fund.rs  add_pool.rs  add_token.rs  add_vault.rs  entrypoint.rs  processor.rs  refdb_init.rs  refdb_instruction.rs  remove_farm.rs  remove_fund.rs  remove_pool.rs  remove_token.rs  remove_vault.rs  set_admin_signers.rs  set_program_admin_signers.rs  set_program_single_authority.rs  upgrade_program.rs
farms/router-orca/: Cargo.toml
farms/router-orca/src/: add_liquidity.rs  harvest.rs  processor.rs  remove_liquidity.rs  stake.rs  swap.rs  unstake.rs  user_init.rs
farms/router-raydium/: Cargo.toml
farms/router-raydium/src/: add_liquidity.rs  processor.rs  remove_liquidity.rs  stake.rs  swap.rs  unstake.rs  user_init.rs
farms/router-saber/: Cargo.toml
farms/router-saber/src/: add_liquidity.rs  entrypoint.rs  harvest.rs  processor.rs  remove_liquidity.rs  stake.rs  swap.rs  unstake.rs  unwrap_token.rs  user_init.rs  wrap_token.rs
farms/vaults/: Cargo.toml
farms/vaults/src/: clock.rs  entrypoint.rs  traits.rs  user_info.rs  vault_info.rs
feature-proposal/cli/: Cargo.toml
feature-proposal/cli/src/: main.rs
feature-proposal/program/: .#Cargo.toml  Cargo.toml  program-id.md
feature-proposal/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
feature-proposal/program/tests/: functional.rs
governance/addin-api/: Cargo.toml
governance/addin-api/src/: max_voter_weight.rs  voter_weight.rs
governance/program/: Cargo.toml
governance/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
governance/program/tests/: migrate_legacy_accounts.rs  process_add_signatory.rs  process_cancel_proposal.rs  process_cast_vote.rs  process_create_account_governance.rs  process_create_governance.rs  process_create_mint_governance.rs  process_create_native_treasury.rs  process_create_program_governance.rs  process_create_proposal.rs  process_create_realm.rs  process_create_token_governance.rs  process_create_token_owner_record.rs  process_deposit_governing_tokens.rs  process_execute_instruction.rs  process_execute_transaction.rs  process_finalize_vote.rs  process_flag_instruction_error.rs  process_flag_transaction_error.rs  process_insert_instruction.rs  process_insert_transaction.rs  process_refund_proposal_deposit.rs  process_relinquish_vote.rs  process_remove_instruction.rs  process_remove_signatory.rs  process_remove_transaction.rs  process_revoke_governing_tokens.rs  process_set_governance_config.rs  process_set_governance_delegate.rs  process_set_realm_authority.rs  process_set_realm_config.rs  process_sign_off_proposal.rs  process_update_program_metadata.rs  process_withdraw_governing_tokens.rs  setup_realm_with_all_addins.rs  setup_realm_with_max_voter_weight_addin.rs  setup_realm_with_voter_weight_addin.rs  use_proposals_with_multiple_options.rs  use_realm_with_all_addins.rs  use_realm_with_max_voter_weight_addin.rs  (+2 more)
governance/test-sdk/: Cargo.toml
governance/test-sdk/src/: #lib.rs#  addins.rs  cookies.rs  lib.rs  lib.rs~  tools.rs
governance/tools/: Cargo.toml
governance/tools/src/: account.rs  error.rs
instruction-padding/program/: Cargo.toml  README.md
instruction-padding/program/src/: instruction.rs  lib.rs  processor.rs
instruction-padding/program/tests/: noop.rs  system.rs
libraries/math/: Cargo.toml
libraries/math/src/: error.rs  instruction.rs  lib.rs  processor.rs
libraries/math/tests/: instruction_count.rs
libraries/merkle-tree-reference/: Cargo.toml
libraries/merkle-tree-reference/src/: lib.rs
managed-token/program/: Cargo.toml
managed-token/program/src/: accounts.rs  instruction.rs  lib.rs  token.rs
managed-token/program/tests/: test.rs
memo/program/: Cargo.toml  program-id.md
memo/program/src/: lib.rs  processor.rs
memo/program/tests/: functional.rs
name-service/program/: Cargo.toml  program-id.md
name-service/program/src/: entrypoint.rs  (+5 more)
record/program/: Cargo.toml  program-id.md
shared-memory/program/: Cargo.toml  program-id.md
stake-pool/cli/: #Cargo.toml#  Cargo.toml
stake-pool/program/: Cargo.toml  program-id.md
(+833 files in other folders)
