[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL Associated Token Account Program Tests"
edition = "2018"
license = "Apache-2.0"
name = "safe-associated-token-account-test"
repository = "https://github.com/fair-exchange/safecoin-program-library"
version = "0.0.1"

[features]
test-sbf = []

[dev-dependencies]
safecoin-program = "1.11.6"
safecoin-program-test = "1.11.6"
safecoin-sdk = "1.11.6"
safe-associated-token-account = { version = "1.1", path = "../program", features = ["no-entrypoint"] }
safe-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
safe-token-2022 = { version = "0.4", path = "../../token/program-2022", features = ["no-entrypoint"] }
