[package]
name = "safe-associated-token-account"
version = "1.0.11"
description = "Safecoin Program Library Associated Token Account"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.9.29"}
safe-token = { version = "3.2", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.9.29"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.9.29"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
