[package]
name = "safe-associated-token-account"
version = "1.0.11"
description = "Safecoin Program Library Associated Token Account"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
assert_matches = "1.5.0"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.10.32"}
safe-token = { version = "3.3", path = "../../token/program", features = ["no-entrypoint"] }
safe-token-2022 = { version = "0.2", path = "../../token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.10.32"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.10.32"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
