[package]
name = "safe-associated-token-account"
version = "1.1.2"
description = "Safecoin Program Library Associated Token Account"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
assert_matches = "1.5.0"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.14.17"}
safe-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
safe-token-2022 = { version = "0.5", path = "../../token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
