[package]
name = "spl-binary-oracle-pair"
version = "0.1.0"
description = "Safecoin Program Library Binary Oracle Pair"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-sbf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = "1.11.6"
safe-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"
borsh = "0.9.1"

[dev-dependencies]
safecoin-program-test = "1.11.6"
safecoin-sdk = "1.11.6"

[lib]
crate-type = ["cdylib", "lib"]
