[package]
name = "spl-binary-oracle-pair"
version = "0.1.0"
description = "Safecoin Program Library Binary Oracle Pair"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.14.17"}
safe-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"
borsh = "0.9.1"

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.14.17"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.14.17"}

[lib]
crate-type = ["cdylib", "lib"]
