[package]
name = "solana-farm-client"
version = "0.0.1"
description = "Safecoin Farm Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2018"

[features]
debug = []

[dependencies]
log = "0.4.14"
arrayvec = "0.7.2"
arrayref = "0.3.6"
serde = "1.0.130"
clap = "2.33.3"
thiserror = "1.0.30"
bs58 = "0.4.0"
safecoin-sdk = "1.10.8"
safecoin-client = "1.10.8"
safecoin-cli-config = "1.10.8"
safecoin-account-decoder = "1.10.8"
safecoin-logger = "1.10.8"
safecoin-version = "1.10.8"
solana-farm-sdk = { path = "../farm-sdk" }
safecoin-clap-utils = "1.10.8"
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
safe-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
quarry-mine = { version = "1.10.0", features = ["no-entrypoint"] }
stable-swap-client = "1.5.2"
stable-swap-math = "1.5.3"
chrono = "0.4.19"
base64 = "0.13.0"
bincode = "1.3.3"
num_enum = "0.5.4"

[lib]
name = "solana_farm_client"
path = "src/lib.rs"

[[bin]]
name = "solana-farm-client"
path = "src/cli/main.rs"
