[package]
name = "solana-farm-client"
version = "1.1.3"
description = "Safecoin Farm Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library/farms"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
arrayvec = "0.7.2"
arrayref = "0.3.6"
serde = "1.0.136"
clap = "2.34.0"
thiserror = "1.0.30"
bs58 = "0.4.0"
safecoin-sdk = "1.9.18"
safecoin-client = "1.9.18"
safecoin-cli-config = "1.9.18"
safecoin-account-decoder = "1.9.18"
safecoin-logger = "1.9.18"
safecoin-version = "1.9.18"
solana-farm-sdk = "1.1.3"
safecoin-clap-utils = "1.9.18"
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
safe-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
stable-swap-client = "1.8.1"
stable-swap-math = "1.8.1"
chrono = "0.4.19"
base64 = "0.13.0"
bincode = "1.3.3"
num_enum = "0.5.7"
pyth-client = "=0.5.0"

[lib]
name = "solana_farm_client"
path = "src/lib.rs"

[[bin]]
name = "solana-farm-client"
path = "src/cli/main.rs"
