[package]
name = "solana-farm-ctrl"
version = "0.0.1"
description = "Safecoin Farm Control"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2018"

[features]
debug = []

[dependencies]
log = "0.4.14"
clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
serde_yaml = "0.8.21"
safecoin-client = "1.9.9"
safecoin-logger = "1.9.9"
safecoin-version = "1.9.9"
safecoin-clap-utils = "1.9.9"
safecoin-sdk = "1.9.9"
solana-farm-sdk = { path = "../farm-sdk" }
solana-farm-client = { path = "../farm-client" }
safe-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
safecoin-cli-config = "1.9.9"
quarry-mine = { version = "1.10.0", features = ["no-entrypoint"] }
url = "2.2.2"
num_enum = "0.5.4"
