[package]
name = "solana-farm-ctrl"
version = "0.0.1"
description = "Safecoin Farm Control"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2018"

[features]
debug = []

[dependencies]
log = "0.4.14"
clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
serde_yaml = "0.8.21"
safecoin-client = {path = "../../../Safecoin/client", version = "1.10.34"}
safecoin-logger = {path = "../../../Safecoin/logger", version = "1.10.34"}
safecoin-version = "1.10.34"
safecoin-clap-utils = {path = "../../../Safecoin/clap-utils", version = "1.10.34"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.10.34"}
solana-farm-sdk = { path = "../farm-sdk" }
solana-farm-client = { path = "../farm-client" }
safe-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
safecoin-cli-config = {path = "../../../Safecoin/cli-config", version = "1.10.34"}
quarry-mine = { version = "1.10.0", features = ["no-entrypoint"] }
url = "2.2.2"
num_enum = "0.5.4"
