[package]
name = "solana-farm-ctrl"
version = "1.1.3"
description = "Safecoin Farm Control"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library/farms"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
clap = "2.34.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
safecoin-client = "1.9.18"
safecoin-logger = "1.9.18"
safecoin-version = "1.9.18"
safecoin-clap-utils = "1.9.18"
safecoin-sdk = "1.9.18"
solana-farm-sdk = "1.1.3"
solana-farm-client = "1.1.3"
safecoin-account-decoder = "1.9.18"
safe-associated-token-account = { version = "=1.1.1", features = ["no-entrypoint"] }
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", features = ["no-entrypoint"] }
safecoin-cli-config = "1.9.18"
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
url = "2.2.2"
num_enum = "0.5.7"
