[package]
name = "solana-fund"
version = "1.1.3"
description = "Safecoin Yield Farming Fund"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library/farms"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2021"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = "1.1.3"
safecoin-program = "1.9.18"
solana-security-txt = "1.0.1"
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
num_enum = "0.5.7"

[dev-dependencies]
safecoin-program-test = "1.9.18"
solana-farm-client = "1.1.3"
safecoin-sdk = "1.9.18"
safecoin-cli-config = "1.9.18"
safecoin-logger = "1.9.18"
rand = "0.8.5"
log = "0.4.16"

[lib]
crate-type = ["cdylib", "lib"]

