[package]
name = "solana-farm-router-orca"
version = "0.0.1"
description = "Safecoin Farm Orca Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
safecoin-program = "1.9.9"
arrayref = "0.3.6"
safe-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = "1.9.9"

[lib]
crate-type = ["cdylib", "lib"]

