[package]
name = "solana-farm-router-raydium"
version = "0.0.1"
description = "Safecoin Farm Raydium Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
safecoin-program = "1.10.8"
arrayref = "0.3.6"

[dev-dependencies]
safecoin-program-test = "1.10.8"

[lib]
crate-type = ["cdylib", "lib"]

