[package]
name = "solana-farm-router-saber"
version = "0.0.1"
description = "Safecoin Farm Saber Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
safecoin-program = "1.10.32"
arrayref = "0.3.6"
stable-swap-client = "1.5.2"
quarry-mine = { version = "1.10.0", features = ["no-entrypoint"] }
quarry-mint-wrapper = { version = "1.10.0", features = ["no-entrypoint"] }
quarry-redeemer = { version = "1.10.0", features = ["no-entrypoint"] }
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = "1.10.32"

[lib]
crate-type = ["cdylib", "lib"]

