[package]
name = "solana-router-saber"
version = "1.1.3"
description = "Safecoin Saber Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library/farms"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2021"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = "1.1.3"
safecoin-program = "1.9.18"
solana-security-txt = "1.0.1"
arrayref = "0.3.6"
stable-swap-client = "1.8.1"
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
quarry-mint-wrapper = { version = "5.0.2", features = ["no-entrypoint"] }
quarry-redeemer = { version = "5.0.2", features = ["no-entrypoint"] }
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = "1.9.18"

[lib]
crate-type = ["cdylib", "lib"]

