[package]
name = "solana-farm-vaults"
version = "0.0.1"
description = "Safecoin Farm Vaults"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2018"

[features]
no-entrypoint = []
debug = []
test-bpf = []
RDM-STAKE-LP-COMPOUND = []
SBR-STAKE-LP-COMPOUND = []
default = ["RDM-STAKE-LP-COMPOUND"]

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
safecoin-program = "1.9.9"
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[dev-dependencies]
safecoin-program-test = "1.9.9"

[lib]
crate-type = ["cdylib", "lib"]

