[package]
name = "solana-vaults"
version = "1.1.3"
description = "Safecoin Vaults"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library/farms"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
edition = "2021"

[features]
no-entrypoint = []
debug = []
test-bpf = []
RDM-STAKE-LP-COMPOUND = []
SBR-STAKE-LP-COMPOUND = []
ORC-STAKE-LP-COMPOUND = []
default = ["RDM-STAKE-LP-COMPOUND"]

[dependencies]
solana-farm-sdk = "1.1.3"
safecoin-program = "1.9.18"
solana-security-txt = "1.0.1"
safe-token = { version = "3.2.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[dev-dependencies]
safecoin-program-test = "1.9.18"

[lib]
crate-type = ["cdylib", "lib"]

