[package]
name = "safe-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
safecoin-clap-utils = {path = "../../../Safecoin/clap-utils", version = "1.10.34"}
safecoin-cli-config = {path = "../../../Safecoin/cli-config", version = "1.10.34"}
safecoin-client = {path = "../../../Safecoin/client", version = "1.10.34"}
safecoin-logger = {path = "../../../Safecoin/logger", version = "1.10.34"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.10.34"}
safe-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "safe-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
