[package]
name = "safe-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
clap = "2.33.3"
safecoin-clap-utils = {path = "../../../Safecoin/clap-utils", version = "1.15.3"}
safecoin-cli-config = {path = "../../../Safecoin/cli-config", version = "1.15.3"}
safecoin-client = {path = "../../../Safecoin/client", version = "1.15.3"}
safecoin-logger = {path = "../../../Safecoin/logger", version = "1.15.3"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.15.3"}
safe-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "safe-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
