[package]
name = "safe-feature-proposal"
version = "1.0.0"
description = "Safecoin Program Library Feature Proposal Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9.0"
safecoin-program = {version = "1.7.17", path = "../../../Safecoin/sdk/program"}
safe-token = { version = "3.2.2", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = {version = "1.7.17", path = "../../../Safecoin/program-test"}
safecoin-sdk = {version = "1.7.17", path = "../../../Safecoin/sdk"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
