[package]
name = "safe-feature-proposal"
version = "1.0.0"
description = "Safecoin Program Library Feature Proposal Program"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.9"
safecoin-program = "1.14.12"
safe-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
safecoin-program-test = "1.14.12"
safecoin-sdk = "1.14.12"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
