[package]
name = "spl-governance-addin-api"
version = "0.1.1"
description = "Safecoin Program Library Governance Addin Api"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
borsh = "0.9.1"
spl-governance-tools= { version = "0.1.2", path ="../tools"}
safecoin-program = "1.9.9"

