[package]
name = "spl-governance-addin-api"
version = "0.1.3"
description = "Safecoin Program Library Governance Addin Api"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = "0.9.1"
spl-governance-tools= { version = "0.1.3", path ="../tools"}
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.14.17"}

