[package]
name = "spl-governance"
version = "1.1.1"
description = "Safecoin Program Library Governance Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.130"
serde_derive = "1.0.103"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.9.29"}
safe-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
proptest = "1.0"
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.9.29"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.9.29"}
spl-governance-test-sdk = { version = "0.1.0", path ="../test-sdk"}

[lib]
crate-type = ["cdylib", "lib"]
