[package]
name = "spl-governance-test-sdk"
version = "0.1.3"
description = "Safecoin Program Library Governance Program Test SDK"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
lazy_static = "1.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.127"
serde_derive = "1.0.103"
safecoin-program = "1.14.12"
safecoin-program-test = "1.14.12"
safecoin-sdk = "1.14.12"
safe-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
