[package]
name = "spl-math"
version = "0.1.0"
description = "Safecoin Program Library Math"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = "1.14.12"
thiserror = "1.0"
uint = "0.9"

[dev-dependencies]
proptest = "1.0.0"
safecoin-program-test = "1.14.12"
safecoin-sdk = "1.14.12"
libm = "0.2.2"

[lib]
crate-type = ["cdylib", "lib"]


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
